--- a/theory.tex
+++ b/theory.tex
@@ -348,6 +348,8 @@ information about the medium interaction with electromagnetic waves, but also al
 Its limitation is, however, that IFC plots do not show the imaginary part and thus are applicable to plot dispersion in media with negligible losses only.  
 Each photonic branch also has to be plotted in a separate plot to prevent the contours from overlapping.
 
+Rigorous solution of Eq. \ref{eq_dispeq_loc} gives in fact three solutions %% TODO
+
 \begin{figure}[ht] \caption{An example of circular isofrequency contours, centered in the $k=0$ point, for a medium with isotropic permittivity \textbf{(a)}, with IFCs forming circles. 
  \textbf{(b)} The case of nondispersive anisotropic permittivity, forming elliptic IFC, and a similar case \textbf{(c)} with general orientation of the optical axis (drawn as dashed black line). \textbf{(d)} A dispersive \textit{hyperbolic medium}, with one component being a function of frequency and crossing zero.} \label{fg_ifc} \centering  %% TODO verify in Belov that local media may be used  as hyperbolic
 	\includegraphics[width=\textwidth]{img/ifc_freqdispersion.pdf} 
@@ -357,21 +359,21 @@ The component of wave vector parallel to the interface (chosen as $k_x$ here, in
 In Fig. \ref{fg_ifc}, we provide examples of IFCs for one isotropic and three anisotropic media.
 
 %}}}
-\paragraph{Index of refraction, and its applicability}  %{{{
-With the background of the theory developed above, the notion of \textit{index of refraction} $N$ can be properly introduced and discussed. 
+\paragraph{Index of refraction and its applicability}  %{{{
+With the background of the theory developed above, the notion of the \textit{index of refraction}, $N$, can be properly introduced and discussed. 
 In the most strict sense, the index of refraction is defined only for \textit{isotropic} media. Then it is equivalent to the ratio of wavenumber $k(\omega) \equiv |\kk|$ to the wavenumber in vacuum at the same frequency: 
 \begin{equation} N(\omega) = k(\omega) \, \frac{c}{\omega} \equiv \sqrt{\epsrl(\omega)\murl(\omega)}, \label{eq_}\end{equation}
 as directly follows from Eq. (\ref{eq_dispeq_loc}).
 
-Starting with a harmonic plane wave with a frequency $\omega$ and the wave vector $\kk^{(1)}$ refracting at an interface of two isotropic media, the projection of $\kk$ to the interface is given as 
+Starting with a harmonic plane wave with the frequency $\omega$ and the wave vector $\kk^{(1)}$ refracting at an interface of two isotropic media, the projection of $\kk$ to the interface is given as 
 $$ k_x = k^{(1)}\,\sin \alpha^{(1)}, $$
-where $\alpha^{(1)}$ is the angle between the wavevector in the first medium $\kk^{(1)}$ and the interface normal. In the second medium, a similar relation must apply, however the wavenumber $k^{(2)}$ may be different and as a result, the angle in the second medium is
+where $\alpha^{(1)}$ is the angle between the wavevector in the first medium $\kk^{(1)}$ and the  normal to the interface. In the second medium, a similar relation must apply, however the wavenumber $k^{(2)}$ may be different and as a result, the angle in the second medium is
 \begin{equation} \alpha^{(2)} = \arcsin\left( \frac{k^{(1)}}{k^{(2)}} \,\sin \alpha^{(1)} \right) = \arcsin\left( \frac{N_1}{N_2} \,\sin \alpha^{(1)} \right), \label{eq_snell}\end{equation}
 which is known as the \textit{Snell} (or also \textit{Snell-Descartes}) law.
 
-The majority of (effective) media discussed in this thesis are however more or less anisotropic, and somewhat surprisingly, the notion of \textit{index of refraction} $N$ seems to be widely used for them in the literature anyway. The author thus feels there is a need for more conscientious treatment of $N$ for such cases. An extremely loose definition of $N$ could be based on computing the ratio $N(\omega, \kk) := kc/\omega$  for any medium, which can be formally done, but in a general case as in Fig. \ref{fg_ifc}b, the wavenumber $k$ also depends on the direction $\alpha$, and the Snell law in Eq. (\ref{eq_snell}) would lose its appealing simplicity, becoming an implicit equation.
+The majority of (effective) media discussed in this thesis are however more or less anisotropic, and somewhat surprisingly, the notion of \textit{index of refraction} $N$ seems to be widely used for them in the literature anyway. The author thus feels there is a need for more conscientious treatment of $N$ for such cases. An extremely loose definition of $N$ could be based on computing the ratio $N(\omega, \kk) := kc/\omega$  for any medium, which can be formally done. In a general case as in Fig. \ref{fg_ifc}b, however, the wavenumber $k$ also depends on the direction $\alpha$, and the Snell law in Eq. (\ref{eq_snell}) would become an implicit equation, losing its appealing simplicity, .
 
-The author proposes to restrict the use of the term to all cases where IFC are perpendicular to $\kk$. This obviously covers all isotropic media, but also generalizes the use to all cases when the waves propagate close the optical axis of any anisotropic media. An example of optical axis orientation, that shares the $k_x$ component with \ref{fg_ifc}a, is shown in Fig. \ref{fg_ifc}c. For small deviations from this angle, where the IFC can be approximated by an osculating circle, 
+The author proposes to restrict the use of the term index of refraction to all cases where IFC are perpendicular to $\kk$. This obviously covers all isotropic media, but also generalizes the use to those cases when the waves propagate close the optical axis of any anisotropic media. An example of optical axis orientation, for which the refraction can be computed using Snell law provided the $k_x$ component is shared with \ref{fg_ifc}a, is shown in Fig. \ref{fg_ifc}c. For small deviations from this angle, where the IFC can be approximated by an osculating circle, 
 \begin{equation} \frac{\partial k}{\partial \alpha} \ll k,\label{eq_osculating}\end{equation}
 the Snell law still gives a correct prediction of the refraction angle. We will however show in the following that the prediction of \textit{beam} propagation is more complicated, being sensitive to the \textit{curvature of IFC} rather than of its tangent. 
 
@@ -379,7 +381,7 @@ the Snell law still gives a correct prediction of the refraction angle. We will 
 \paragraph{Isofrequency contours of hyperbolic media}  %{{{
 The IFCs in Fig. \ref{fg_ifc}a,b,c were plotted for non-dispersive media, i. e. with $\epsrl$ and $\murl$ independent of frequency. The case of the lower polariton branch of a dispersive isotropic medium is already shown in Fig. \ref{fg_ifc_dc}, characteristic by non-equidistant IFCs which lead to the refraction angle being dependent on the frequency.
 
-A more complicated cases are the \textit{hyperbolic media}, where in a certain spectral region one component of the anisotropic permittivity is positive, while another one is negative. The solution of Eq. (\ref{eq_dispdet}) then results in a hyperbola.
+A more complicated cases are the \textit{hyperbolic media}, where, in a certain spectral region, one component of the anisotropic permittivity is positive, while another one is negative. The solution of Eq. (\ref{eq_dispdet}) then results in a hyperbola.
 
 As there is no other way to achieve negative permittivity than above a Lorentz resonator, hyperbolic media are always dispersive. 
 
