--- a/theory.tex
+++ b/theory.tex
@@ -375,7 +375,7 @@ where $\alpha^{(1)}$ is the angle between the wavevector in the first medium $\k
 \begin{equation} \alpha^{(2)} = \arcsin\left( \frac{k^{(1)}}{k^{(2)}} \,\sin \alpha^{(1)} \right) = \arcsin\left( \frac{N_1}{N_2} \,\sin \alpha^{(1)} \right), \label{eq_snell}\end{equation}
 which is known as the \textit{Snell} (or also \textit{Snell-Descartes}) law.
 
-The majority of (effective) media discussed in this thesis are however more or less anisotropic, and somewhat surprisingly, the notion of \textit{index of refraction} $N$ seems to be widely used for them in the literature anyway. The author thus feels there is a need for more conscientious treatment of $N$ for such cases. An extremely loose definition of $N$ could be based on computing the ratio $N(\omega, \kk) := kc/\omega$  for any medium, which can be formally done. In a general case as in Fig. \ref{fg_ifc}b, however, the wavenumber $k$ also depends on the direction $\alpha$, and the Snell law in Eq. (\ref{eq_snell}) would become an implicit equation, losing its appealing simplicity, .
+The majority of (effective) media discussed in this thesis are however more or less anisotropic, and somewhat surprisingly, the notion of \textit{index of refraction} $N$ seems to be widely used for them in the literature anyway. The author thus feels there is a need for more conscientious treatment of $N$ for such cases. An extremely loose definition of $N$ could be based on computing the ratio $N(\omega, \kk) := kc/\omega$  for any medium, which can be formally done. In a general case as in Fig. \ref{fg_ifc}b, however, the wavenumber $k$ also depends on the direction $\alpha$, and the Snell law in Eq. (\ref{eq_snell}) would become an implicit equation, losing its appealing simplicity.
 
 The author proposes to restrict the use of the term index of refraction to all cases where IFC are perpendicular to $\kk$. This obviously covers all isotropic media, but also generalizes the use to those cases when the waves propagate close the optical axis of any anisotropic media. An example of optical axis orientation, for which the refraction can be computed using Snell law provided the $k_x$ component is shared with \ref{fg_ifc}a, is shown in Fig. \ref{fg_ifc}c. For small deviations from this angle, where the IFC can be approximated by an osculating circle, 
 \begin{equation} \frac{\partial k}{\partial \alpha} \ll k,\label{eq_osculating}\end{equation}
@@ -393,8 +393,11 @@ the Snell law still gives a correct prediction of the refraction angle. We will 
 \paragraph{Phase velocity and group velocity near single resonance}  %{{{
 So far only the propagation and refraction of an infinite, single-frequency wave was discussed, and it was shown that it is determined by the shape of IFC at the given frequency. 
 
-If the wave is temporally modulated, its amplitude in time is given as a complex envelope function $\E_0(t)$ (instead of a constant vector $\E_0$ in Eq. \ref{eq_pw}). This can be equivalently expressed in the frequency domain as the wave being composed of multiple frequency components, with respective amplitudes given by the Fourier transform of $\E_0(t)$. 
-The envelope results from the interference of these components, and therefore its position is determined by their \textit{mutual phase difference}, not by the absolute phase. If the wave propagates through vacuum or other nondispersive medium, each frequency component of the wave acquires phase proportional to its frequency.
+If the wave is temporally modulated, its envelope in time is given as a complex vector function $\E_0(t)$ replacing the constant vector $\E_0$ in Eq. \ref{eq_pw}. This can be equivalently expressed in the frequency domain as the wave being formed by superposition (and interference) of multiple frequency components, with respective amplitudes given by the Fourier transform of $\E_0(t)$. The position of the envelope in time is determined by their \textit{mutual phase difference}, not by the absolute wave phase. 
+
+A similar argument can be made regarding the spatial modulation of the wave. Any wave other than infinite plane wave is a supeposition of waves with different wavevectors.
+
+If the wave propagates through vacuum or other nondispersive medium, each frequency component of the wave acquires phase proportional to its frequency, and the envelope does not shift against the propagates with the same velocity as the waves.
 
 
 %If the amplitude and phase of the wave is not  temporal shape of a wave can be composed as a superposition of different frequency components with certain amplitude and phase. Similarly, any spatial shape of a beam can be composed of infinite waves of different wavevectors. The isofrequency contours, and their dependence on frequency, allow to determine how the temporal and spatial envelope will propagate. 
